test/deriver/errors/unsupported_type_arrow.expected
File "_none_", line 1:
Warning 46: illegal environment variable OCAML_COLOR : expected "auto", "always" or "never"
File "unsupported_type_arrow.ml", line 1, characters 0-39:
1 | type t = unit -> int [@@deriving irmin]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_irmin: function type encountered: unit -> int. Functions are not Irmin-serialisable.
